# invenio-app-rdm

./: .editorconfig  .eslintrc.yml  .git-blame-ignore-revs  .gitignore  .prettierrc  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  Dockerfile.base  INSTALL.rst  LICENSE  MANIFEST.in  Pipfile  README.rst  SECURITY.md  TROUBLESHOOTING.md  babel.ini  docker-compose.full.yml  docker-compose.yml  docker-services.yml  pyproject.toml  pytest.ini  requirements-devel.txt  run-js-linter.sh  run-tests.sh  setup.cfg  setup.py
.github/: default-config.yml
.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  pypi-release.yml  release.yml  stale.yml  tests.yml
.tx/: config
docker/: build-images.sh  wait-for-services.sh
docker/haproxy/: Dockerfile  haproxy.cfg  haproxy_cert.pem
docker/nginx/: Dockerfile  nginx.conf  test.crt  test.key
docker/nginx/conf.d/: default.conf
docker/postgres/: Dockerfile  init-app-db.sh
docker/uwsgi/: uwsgi_rest.ini  uwsgi_ui.ini
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  license.rst  make.bat  usage.rst
invenio_app_rdm/: __init__.py  admin.py  api.py  cli.py  config.py  ext.py  patches.py  permissions.py  profiler.py  tasks.py  urls.py  version.py  views.py
invenio_app_rdm/admin_ui/: __init__.py  permissions.py
invenio_app_rdm/admin_ui/views/: __init__.py  admin.py  ui.py
invenio_app_rdm/administration/: __init__.py
invenio_app_rdm/administration/audit_logs/: __init__.py  audit_logs.py
invenio_app_rdm/administration/domains/: __init__.py  domains.py
invenio_app_rdm/administration/moderation/: __init__.py  requests.py
invenio_app_rdm/administration/moderation_requests/: __init__.py  moderation_requests.py
invenio_app_rdm/administration/records/: __init__.py  records.py
invenio_app_rdm/administration/roles/: __init__.py  roles.py
invenio_app_rdm/administration/user_moderation/: __init__.py  user_moderation.py
invenio_app_rdm/administration/users/: __init__.py  permissions.py  users.py
invenio_app_rdm/administration/views/: __init__.py  ui.py
invenio_app_rdm/backoffice/views/: communities.py
invenio_app_rdm/communities_ui/: __init__.py  searchapp.py  sitemap.py
invenio_app_rdm/communities_ui/views/: __init__.py  communities.py  ui.py
invenio_app_rdm/fixtures/: __init__.py  oai_sets.py  pages.py
invenio_app_rdm/fixtures/data/: oai_sets.yaml
invenio_app_rdm/fixtures/pages/: .gitkeep
invenio_app_rdm/orcha/: __init__.py  client.py  views.py
invenio_app_rdm/records_ui/: __init__.py  searchapp.py  sitemap.py  utils.py
invenio_app_rdm/records_ui/previewer/: __init__.py  iiif_simple.py  mirador.py  previewable_zip.py
invenio_app_rdm/records_ui/views/: __init__.py  decorators.py  deposits.py  filters.py  records.py  utils.py
invenio_app_rdm/redirector/: __init__.py  resource.py  views.py
invenio_app_rdm/requests_ui/: __init__.py
invenio_app_rdm/requests_ui/views/: __init__.py  requests.py  ui.py
invenio_app_rdm/scripts/: personal_data_export.py
invenio_app_rdm/stats/: __init__.py  event_builders.py  permissions.py
invenio_app_rdm/stats/templates/aggregations/: __init__.py
invenio_app_rdm/stats/templates/events/: __init__.py
invenio_app_rdm/theme/: __init__.py  search.py  utils.py  views.py  webpack.py
invenio_app_rdm/theme/static/: robots.txt
invenio_app_rdm/theme/templates/invenio_app_rdm/: deposit.html  footer.html  frontpage.html  header.html  header_frontpage.html  iiif_preview.html  page.html  record_view_page.html  search.html  sign_up.html
invenio_app_rdm/theme/views/: __init__.py  deposits.py  filters.py  general.py  records.py  records_ui.py
invenio_app_rdm/translations/: messages.pot
invenio_app_rdm/translations/af/LC_MESSAGES/: messages.po
invenio_app_rdm/translations/ar/LC_MESSAGES/: messages.po
invenio_app_rdm/translations/bg/LC_MESSAGES/: messages.po
invenio_app_rdm/translations/ca/LC_MESSAGES/: messages.po
invenio_app_rdm/translations/cs/LC_MESSAGES/: messages.po
invenio_app_rdm/translations/da/LC_MESSAGES/: messages.po
invenio_app_rdm/translations/de/LC_MESSAGES/: messages.po
invenio_app_rdm/translations/de_AT/LC_MESSAGES/: messages.po
invenio_app_rdm/translations/de_DE/LC_MESSAGES/: messages.po
invenio_app_rdm/upgrade_scripts/: __init__.py  fix_migrated_records_from_1_0_to_2_0.py  fix_migrated_records_from_8_0_to_9_0.py  migrate_10_0_to_11_0.py  migrate_11_0_to_12_0.py  migrate_12_0_to_13_0.py  migrate_13_0_to_14_0.py  migrate_1_0_records_to_2_0.py  migrate_2_0_to_3_0.py  migrate_3_0_to_4_0.py  migrate_4_0_to_6_0.py  migrate_6_0_to_7_0.py  migrate_7_0_to_8_0.py  migrate_8_0_to_9_0.py  migrate_9_0_to_10_0.py  migrate_role_ids_to_names.py  prepare_migration_13_0_to_14_0.py
invenio_app_rdm/users/: schemas.py
invenio_app_rdm/users_ui/: __init__.py  searchapp.py
invenio_app_rdm/users_ui/views/: __init__.py  dashboard.py  ui.py
invenio_app_rdm/utils/: checks.py  files.py
invenio_backoffice/: __init__.py  backoffice.py  config.py  decorators.py  ext.py  proxies.py  views.py
scripts/: bootstrap  console  server  setup  update
tests/: conftest.py  file_input.py  test_cli.py  test_migrate_13_0_to_14_0.py  test_patches.py  test_tasks.py  test_utils.py  test_version.py  test_views.py
tests/api/: __init__.py  conftest.py  test_protect_files_rest.py  test_record_api.py  test_stats_api.py
tests/e2e/: conftest.py  test_front_page.py
tests/fixtures/: conftest.py  test_cli.py  test_fixtures.py
tests/fixtures/app_data/: oai_sets.yaml  pages.yaml
tests/mock_module/: __init__.py  views.py
tests/mock_module/templates/: mock_mail.html
tests/redirector/: __init__.py  conftest.py  test_redirector.py
tests/ui/: conftest.py  test_admin.py  test_administration_users.py  test_configuration.py  test_deposits.py  test_export_formats.py  test_file_download.py  test_filters.py  test_jinja_filters.py  test_robotstxt.py  test_signposting_ui.py  test_sitemaps.py  test_static.py  test_stats_ui.py  test_tombstone.py
(+746 files in other folders)
