# SPDX-FileCopyrightText: 2019-2025 CERN.
# SPDX-FileCopyrightText: 2019-2026 Northwestern University.
# SPDX-FileCopyrightText: 2022-2026 Graz University of Technology.
# SPDX-FileCopyrightText: 2025 University of Münster.
# SPDX-FileCopyrightText: 2024 Ubiquity Press.
# SPDX-FileCopyrightText: 2025-2026 KTH Royal Institute of Technology.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-app-rdm"
description = "Invenio Research Data Management."
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "Invenio",
  "invenio-App-RDM",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  # Invenio core modules
  "invenio-app>=3.0.0,<4.0.0",
  "invenio-base>=2.1.0,<3.0.0",
  "invenio-cache>=3.0.0,<4.0.0",
  "invenio-celery>=2.0.0,<3.0.0",
  "invenio-config>=1.0.3,<2.0.0",
  "invenio-db[postgresql,mysql]>=2.2.0,<3.0.0",
  "invenio-i18n>=4.0.0,<5.0.0",

  # Invenio base bundle
  "invenio-assets>=4.0.0,<5.0.0",
  "invenio-formatter>=5.0.0,<6.0.0",
  "invenio-logging>=4.0.0,<5.0.0",
  "invenio-mail>=2.0.0,<3.0.0",
  "invenio-rest>=4.0.0,<5.0.0",
  "invenio-theme>=5.0.0,<6.0.0",

  # Invenio auth bundle
  "invenio-access>=7.0.0,<8.0.0",
  "invenio-accounts>=9.0.0,<10.0.0",
  "invenio-oauth2server>=6.0.0,<7.0.0",
  "invenio-oauthclient>=9.0.0,<10.0.0",
  "invenio-userprofiles>=7.0.0,<8.0.0",

  # Invenio metadata bundle
  "invenio-indexer>=6.0.0,<7.0.0",
  "invenio-jsonschemas>=2.0.0,<3.0.0",
  "invenio-oaiserver>=6.0.0,<7.0.0",
  "invenio-pidstore>=4.0.0,<5.0.0",
  "invenio-records>=6.0.0,<7.0.0",
  "invenio-records-rest>=6.0.0,<7.0.0",
  "invenio-records-ui>=5.0.0,<6.0.0",
  "invenio-search-ui>=5.0.0,<6.0.0",

  # Invenio files bundle
  "invenio-files-rest>=6.0.0,<7.0.0",
  "invenio-previewer>=6.0.0,<7.0.0",
  "invenio-records-files>=4.0.0,<5.0.0",

  # Invenio-App-RDM
  "cairosvg>=2.5.2,<3.0.0",
  "invenio-audit-logs>=4.0.0,<5.0.0",
  "invenio-banners>=8.0.0,<9.0.0",
  "invenio-collections>=10.0.0,<11.0.0",
  "invenio-communities>=29.0.0,<30.0.0",
  "invenio-pages>=10.0.0,<11.0.0",
  "invenio-rdm-records>=33.0.0,<34.0.0",
  "invenio-sitemap>=0.1.0,<2.0.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-app-rdm"

[project.entry-points."flask.commands"]
rdm = "invenio_app_rdm.cli:rdm"

[project.entry-points."invenio_administration.views"]
invenio_app_rdm_audit_logs = "invenio_app_rdm.administration.audit_logs:AuditLogListView"
invenio_app_rdm_drafts_list = "invenio_app_rdm.administration.records:DraftAdminListView"
invenio_app_rdm_records_list = "invenio_app_rdm.administration.records:RecordAdminListView"
invenio_requests_moderation_requests_details = "invenio_app_rdm.administration.moderation.requests:ModerationRequestDetailView"
invenio_requests_moderation_requests_list = "invenio_app_rdm.administration.moderation.requests:ModerationRequestListView"
invenio_requests_user_moderation_detail = "invenio_app_rdm.administration.user_moderation:UserModerationRequestDetailView"
invenio_requests_user_moderation_list = "invenio_app_rdm.administration.user_moderation:UserModerationListView"
invenio_users_resources_domains_create = "invenio_app_rdm.administration.domains:DomainsCreateView"
invenio_users_resources_domains_detail = "invenio_app_rdm.administration.domains:DomainsDetailView"
invenio_users_resources_domains_edit = "invenio_app_rdm.administration.domains:DomainsEditView"
invenio_users_resources_domains_list = "invenio_app_rdm.administration.domains:DomainsListView"
invenio_users_resources_roles_create = "invenio_app_rdm.administration.roles:RolesCreateView"
invenio_users_resources_roles_detail = "invenio_app_rdm.administration.roles:RolesDetailView"
invenio_users_resources_roles_edit = "invenio_app_rdm.administration.roles:RolesEditView"
invenio_users_resources_roles_list = "invenio_app_rdm.administration.roles:RolesListView"
invenio_users_resources_users_create = "invenio_app_rdm.administration.users:UsersCreateView"
invenio_users_resources_users_details = "invenio_app_rdm.administration.users:UsersDetailView"
invenio_users_resources_users_list = "invenio_app_rdm.administration.users:UsersListView"

[project.entry-points."invenio_assets.webpack"]
invenio_app_rdm_theme = "invenio_app_rdm.theme.webpack:theme"

[project.entry-points."invenio_base.api_apps"]
profiler = "invenio_app_rdm.ext:MultiProfiler"

[project.entry-points."invenio_base.apps"]
profiler = "invenio_app_rdm.ext:MultiProfiler"

[project.entry-points."invenio_base.blueprints"]
invenio_app_rdm = "invenio_app_rdm.theme.views:create_blueprint"
invenio_app_rdm_administration = "invenio_app_rdm.administration.views:create_ui_blueprint"
invenio_app_rdm_communities = "invenio_app_rdm.communities_ui.views:create_ui_blueprint"
invenio_app_rdm_records = "invenio_app_rdm.records_ui.views:create_blueprint"
invenio_app_rdm_requests = "invenio_app_rdm.requests_ui.views:create_ui_blueprint"
invenio_app_rdm_users = "invenio_app_rdm.users_ui.views:create_ui_blueprint"
invenio_redirector = "invenio_app_rdm.redirector.views:create_blueprint"

[project.entry-points."invenio_base.finalize_app"]
invenio_app_rdm = "invenio_app_rdm.ext:finalize_app"

[project.entry-points."invenio_celery.tasks"]
invenio_app_rdm = "invenio_app_rdm.tasks"

[project.entry-points."invenio_config.module"]
invenio_app_rdm = "invenio_app_rdm.config"

[project.entry-points."invenio_i18n.translations"]
messages = "invenio_app_rdm"

[project.entry-points."invenio_previewer.previewers"]
iiif_simple = "invenio_app_rdm.records_ui.previewer.iiif_simple"
previewable_zip = "invenio_app_rdm.records_ui.previewer.previewable_zip"

[project.optional-dependencies]
elasticsearch7 = [
  "invenio-search[elasticsearch7]>=3.0.0,<4.0.0",
]
opensearch1 = [
  "invenio-search[opensearch1]>=3.0.0,<4.0.0",
]
opensearch2 = [
  "invenio-search[opensearch2]>=3.0.0,<4.0.0",
]
profiler = [
  "flask-multiprofiler>=0.1.0",
]
s3 = [
  "invenio-s3>=6.0.0,<7.0.0",
]
tests = [
  "pytest-black>=0.6.0",
  "pytest-invenio>=4.0.0,<5.0.0",
  "sphinx>=4.5.0",
  "time-machine>=2.12.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "invenio_app_rdm/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "invenio_app_rdm/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_app_rdm/translations/messages.pot"
output_dir = "invenio_app_rdm/translations/"

[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[tool.hatch.version]
path = "invenio_app_rdm/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_app_rdm",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_app_rdm --cov-report=term-missing'
filterwarnings = ["ignore::marshmallow.warnings.RemovedInMarshmallow4Warning"]
testpaths = "tests invenio_app_rdm"
live_server_scope = "module"

# UV needs to be told explicitly which extras are conflicting:
# https://docs.astral.sh/uv/concepts/projects/config/#conflicting-dependencies
[tool.uv]
conflicts = [
  [
    { extra = "opensearch1" },
    { extra = "opensearch2" },
    { extra = "elasticsearch7" },
  ]
]
