# -*- coding: utf-8 -*-
#
# Copyright (C) 2019-2022 CERN.
# Copyright (C) 2019-2022 Northwestern University.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio App RDM is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-app-rdm
version = attr: invenio_app_rdm.__version__
description = Invenio Research Data Management.
long_description = file: README.rst, CHANGES.rst
keywords = invenio-app-rdm Invenio
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-app-rdm
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    # Invenio core modules
    invenio-app>=1.3.4,<1.4.0
    invenio-base>=1.2.11,<1.3.0
    invenio-cache>=1.1.1,<2.0.0
    invenio-celery>=1.2.4,<1.3.0
    invenio-config>=1.0.3,<1.1.0
    invenio-i18n>=2.0.0,<3.0.0
    invenio-db[postgresql,mysql]>=1.1.0,<1.2.0
    # Invenio base bundle
    invenio-admin>=1.4.0,<1.5.0
    invenio-assets>=3.0.0,<4.0.0
    invenio-formatter>=2.0.0,<3.0.0
    invenio-logging[sentry-sdk]>=1.3.2,<1.4.0
    invenio-mail>=1.0.2,<1.1.0
    invenio-rest>=1.2.8,<1.3.0
    invenio-theme>=2.0.0,<3.0.0
    # Invenio auth bundle
    invenio-access>=2.0.0,<3.0.0
    invenio-accounts>=3.0.0,<4.0.0
    invenio-oauth2server>=2.0.0,<2.1.0
    invenio-oauthclient>=3.0.0,<4.0.0
    invenio-userprofiles>=2.3.0,<3.0.0
    # Invenio metadata bundle
    invenio-indexer>=2.1.0,<2.2.0
    invenio-jsonschemas>=1.1.4,<1.2.0
    invenio-oaiserver>=2.2.0,<2.3.0
    invenio-pidstore>=1.3.0,<1.4.0
    invenio-records-rest>=2.2.0,<2.3.0
    invenio-records-ui>=1.2.0,<1.3.0
    invenio-records>=2.2.1,<3.0.0
    invenio-search-ui>=2.4.0,<3.0.0
    # Invenio files bundle
    invenio-files-rest>=2.0.0,<3.0.0
    invenio-previewer>=2.0.0,<3.0.0
    invenio-records-files>=1.2.1,<1.3.0
    # Invenio-App-RDM
    invenio-communities>=7.0.0,<8.0.0
    invenio-rdm-records>=4.0.0,<5.0.0
    CairoSVG>=2.5.2,<3.0.0
    invenio-banners>=2.1.0,<3.0.0
    invenio-pages>=3.0.0,<4.0.0
    # Pinned due to before_first_request deprecation https://flask.palletsprojects.com/en/2.2.x/api/#flask.Flask.before_first_request
    Flask>=2.2.0,<2.3.0

[options.extras_require]
tests =
    pytest-black>=0.3.0
    pytest-invenio>=2.1.0,<3.0.0
    Sphinx>=4.5.0
elasticsearch7 =
    invenio-search[elasticsearch7]>=2.1.0,<3.0.0
opensearch1 =
    invenio-search[opensearch1]>=2.1.0,<3.0.0
opensearch2 =
    invenio-search[opensearch2]>=2.1.0,<3.0.0
s3 =
    invenio-s3~=1.0.5

[options.entry_points]
flask.commands =
    rdm = invenio_app_rdm.cli:rdm
invenio_base.blueprints =
    invenio_app_rdm_records = invenio_app_rdm.records_ui.views:create_blueprint
    invenio_app_rdm = invenio_app_rdm.theme.views:create_blueprint
    invenio_app_rdm_requests = invenio_app_rdm.requests_ui.views:create_ui_blueprint
    invenio_app_rdm_communities = invenio_app_rdm.communities_ui.views:create_ui_blueprint
    invenio_app_rdm_users = invenio_app_rdm.users_ui.views:create_ui_blueprint
    invenio_app_rdm_administration =  invenio_app_rdm.administration.views:create_ui_blueprint
    invenio_redirector = invenio_app_rdm.redirector.views:create_blueprint
invenio_config.module =
    invenio_app_rdm = invenio_app_rdm.config
invenio_i18n.translations =
    messages = invenio_app_rdm
invenio_assets.webpack =
    invenio_app_rdm_theme = invenio_app_rdm.theme.webpack:theme
invenio_previewer.previewers =
    iiif_simple = invenio_app_rdm.records_ui.previewer.iiif_simple
invenio_celery.tasks =
    invenio_app_rdm = invenio_app_rdm.tasks
invenio_administration.views =
    invenio_users_resources_users_list = invenio_app_rdm.administration.users:UsersListView
    invenio_users_resources_users_details = invenio_app_rdm.administration.users:UsersDetailView
    invenio_requests_user_moderation_list = invenio_app_rdm.administration.user_moderation:UserModerationListView
    invenio_requests_user_moderation_detail = invenio_app_rdm.administration.user_moderation:UserModerationRequestDetailView

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_app_rdm/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_app_rdm/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_app_rdm/translations/messages.pot
output-dir = invenio_app_rdm/translations/

[update_catalog]
input-file = invenio_app_rdm/translations/messages.pot
output-dir = invenio_app_rdm/translations/

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_app_rdm --cov-report=term-missing
testpaths = tests invenio_app_rdm
live_server_scope = module
