# -*- coding: utf-8 -*-
#
# Copyright (C) 2019-2025 CERN.
# Copyright (C) 2019-2022 Northwestern University.
# Copyright (C) 2022-2024 Graz University of Technology.
# Copyright (C) 2025 University of Münster.
#
# Invenio App RDM is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-app-rdm
version = attr: invenio_app_rdm.__version__
description = Invenio Research Data Management.
long_description = file: README.rst, CHANGES.rst
keywords = invenio-app-rdm Invenio
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-app-rdm
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    # Invenio core modules
    invenio-app>=2.1.0,<3.0.0
    invenio-base>=2.1.0,<3.0.0
    invenio-cache>=2.0.0,<3.0.0
    invenio-celery>=2.0.0,<3.0.0
    invenio-config>=1.0.3,<2.0.0
    invenio-i18n>=3.0.0,<4.0.0
    invenio-db[postgresql,mysql]>=2.0.0,<3.0.0
    # Invenio base bundle
    invenio-assets>=4.0.0,<5.0.0
    invenio-formatter>=3.0.0,<4.0.0
    invenio-logging>=4.0.0,<5.0.0
    invenio-mail>=2.0.0,<3.0.0
    invenio-rest>=2.0.0,<3.0.0
    invenio-theme>=4.0.0,<5.0.0
    # Invenio auth bundle
    invenio-access>=4.0.0,<5.0.0
    invenio-accounts>=6.0.0,<7.0.0
    invenio-oauth2server>=3.0.0,<4.0.0
    invenio-oauthclient>=5.0.0,<6.0.0
    invenio-userprofiles>=4.0.0,<5.0.0
    # Invenio metadata bundle
    invenio-indexer>=3.0.0,<4.0.0
    invenio-jsonschemas>=2.0.0,<3.0.0
    invenio-oaiserver>=3.0.0,<4.0.0
    invenio-pidstore>=2.0.0,<3.0.0
    invenio-records-rest>=3.0.0,<4.0.0
    invenio-records-ui>=2.0.0,<3.0.0
    invenio-records>=3.0.0,<4.0.0
    invenio-search-ui>=4.0.0,<5.0.0
    # Invenio files bundle
    invenio-files-rest>=3.0.0,<4.0.0
    invenio-previewer>=3.0.0,<4.0.0
    invenio-records-files>=1.2.1,<2.0.0
    # Invenio-App-RDM
    invenio-collections>=0.4.0,<1.0.0
    invenio-communities>=18.2.0,<19.0.0
    invenio-rdm-records>=18.14.0,<19.0.0
    CairoSVG>=2.5.2,<3.0.0
    invenio-banners>=4.0.0,<5.0.0
    invenio-pages>=6.0.0,<7.0.0
    invenio-audit-logs>=0.1.0,<1.0.0
    invenio-sitemap>=0.1.0,<2.0.0

[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    pytest-invenio>=3.3.0,<4.0.0
    Sphinx>=4.5.0
    time-machine>=2.12.0,<3.0.0
elasticsearch7 =
    invenio-search[elasticsearch7]>=3.0.0,<4.0.0
opensearch1 =
    invenio-search[opensearch1]>=3.0.0,<4.0.0
opensearch2 =
    invenio-search[opensearch2]>=3.0.0,<4.0.0
s3 =
    invenio-s3>=2.0.0,<3.0.0

[options.entry_points]
flask.commands =
    rdm = invenio_app_rdm.cli:rdm
invenio_base.blueprints =
    invenio_app_rdm_records = invenio_app_rdm.records_ui.views:create_blueprint
    invenio_app_rdm = invenio_app_rdm.theme.views:create_blueprint
    invenio_app_rdm_requests = invenio_app_rdm.requests_ui.views:create_ui_blueprint
    invenio_app_rdm_communities = invenio_app_rdm.communities_ui.views:create_ui_blueprint
    invenio_app_rdm_users = invenio_app_rdm.users_ui.views:create_ui_blueprint
    invenio_app_rdm_administration =  invenio_app_rdm.administration.views:create_ui_blueprint
    invenio_redirector = invenio_app_rdm.redirector.views:create_blueprint
invenio_config.module =
    invenio_app_rdm = invenio_app_rdm.config
invenio_i18n.translations =
    messages = invenio_app_rdm
invenio_assets.webpack =
    invenio_app_rdm_theme = invenio_app_rdm.theme.webpack:theme
invenio_previewer.previewers =
    iiif_simple = invenio_app_rdm.records_ui.previewer.iiif_simple
invenio_celery.tasks =
    invenio_app_rdm = invenio_app_rdm.tasks
invenio_administration.views =
    invenio_users_resources_users_list = invenio_app_rdm.administration.users:UsersListView
    invenio_users_resources_users_details = invenio_app_rdm.administration.users:UsersDetailView
    invenio_users_resources_domains_list = invenio_app_rdm.administration.domains:DomainsListView
    invenio_users_resources_domains_edit = invenio_app_rdm.administration.domains:DomainsEditView
    invenio_users_resources_domains_detail = invenio_app_rdm.administration.domains:DomainsDetailView
    invenio_users_resources_domains_create = invenio_app_rdm.administration.domains:DomainsCreateView
    invenio_requests_user_moderation_list = invenio_app_rdm.administration.user_moderation:UserModerationListView
    invenio_requests_user_moderation_detail = invenio_app_rdm.administration.user_moderation:UserModerationRequestDetailView
    invenio_app_rdm_records_list = invenio_app_rdm.administration.records:RecordAdminListView
    invenio_app_rdm_drafts_list = invenio_app_rdm.administration.records:DraftAdminListView
    invenio_app_rdm_audit_logs = invenio_app_rdm.administration.audit_logs:AuditLogListView
invenio_base.finalize_app =
    invenio_app_rdm = invenio_app_rdm.ext:finalize_app

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_app_rdm/translations/
use_fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping_file = babel.ini
output_file = invenio_app_rdm/translations/messages.pot
add_comments = NOTE

[init_catalog]
input_file = invenio_app_rdm/translations/messages.pot
output_dir = invenio_app_rdm/translations/

[update_catalog]
input_file = invenio_app_rdm/translations/messages.pot
output_dir = invenio_app_rdm/translations/

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_app_rdm --cov-report=term-missing
testpaths = tests invenio_app_rdm
live_server_scope = module
filterwarnings =
    ignore::marshmallow.warnings.RemovedInMarshmallow4Warning
